cards design change

--- a/pages/Aboutus.html
+++ b/pages/Aboutus.html
@@ -33,145 +33,145 @@
     </div>
     <div class="card-container">
         <div class="card1">
-            <img src="./../images/Ankita.jpg" class="image"/><br/><br/>
+            <img src="./../images/About-us img/Ankita.jpg" class="image"/><br/><br/>
             <b class="name">Ankita Pawar</b><br/><br/>
             <p class="info">Hii! I am Ankita Pawar. I am currently pursuing BE (final) in IT branch from TGPCET, Nagpur</p>
             <div class="social-contact">
                 <ul>
-                    <li><a href="https://github.com/ankitapawar0608" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/8830779433" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
-                    <li><a href="mailto:ankitapawar0608@gmail.com" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
+                    <li><a href="https://github.com/ankitapawar0608" target="blank"><img class="social-media-img " src="./../images/About-us img/github.png"/></a></li>
+                    <li><a href="https://wa.me/8830779433" target="blank"><img class="social-media-img " src="./../images/About-us img/whatsapp.png"/></a></li>
+                    <li><a href="mailto:ankitapawar0608@gmail.com" target="blank"><img class="social-media-img " src="./../images/About-us img/email.png"/></a></li>
                 </ul>
             </div>
 
         </div>
         <div class="card1">
-            <img src="./../images/Mahesh.jpg" class="image"/><br/><br/>
+            <img src="./../images/About-us img/Mahesh.jpg" class="image"/><br/><br/>
             <b class="name">Mahesh Bhongal</b><br/><br/>
             <p class="info">Hii! I am Mahesh Bhongal. I am currently pursuing MSC computer science (final) in RSMDP, Deolali pravara</p>
             <div class="social-contact">
                 <ul>
-                    <li class="github"><a href="https://github.com/mbpatil_29" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/9518353792" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
-                    <li><a href="mailto:mbhongal17@gmail.com" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
+                    <li class="github"><a href="https://github.com/mbpatil_29" target="blank"><img class="social-media-img " src="./../images/About-us img/github.png"/></a></li>
+                    <li><a href="https://wa.me/9518353792" target="blank"><img class="social-media-img " src="./../images/About-us img/whatsapp.png"/></a></li>
+                    <li><a href="mailto:mbhongal17@gmail.com" target="blank"><img class="social-media-img " src="./../images/About-us img/email.png"/></a></li>
                 </ul>
             </div>
 
         </div>
         <div class="card1">
-            <img src="./../images/MJ.jpg" class="image"/><br/><br/>
+            <img src="./../images/About-us img/MJ.jpg" class="image"/><br/><br/>
             <b class="name">Mahesh Jadhav</b><br/><br/>
             <p class="info">Hii! I am Mahesh Jadhav. I am currently pursuing BSC computer science (final) in RSMDP, Deolali pravara</p>
             <div class="social-contact">
                 <ul>
-                    <li><a href="https://github.com/Maheshjadhav3329" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/9359613329" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
-                    <li><a href="mailto:jadhavmahesh4898@gmail.com" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
+                    <li><a href="https://github.com/Maheshjadhav3329" target="blank"><img class="social-media-img " src="./../images/About-us img/github.png"/></a></li>
+                    <li><a href="https://wa.me/9359613329" target="blank"><img class="social-media-img " src="./../images/About-us img/whatsapp.png"/></a></li>
+                    <li><a href="mailto:jadhavmahesh4898@gmail.com" target="blank"><img class="social-media-img " src="./../images/About-us img/email.png"/></a></li>
                 </ul>
             </div>
 
         </div>
         <div class="card1">
-            <img src="./../images/Harshada.jpg" class="image"/><br/><br/>
+            <img src="./../images/About-us img/Harshada.jpg" class="image"/><br/><br/>
             <b class="name">Harshada Hedau</b><br/><br/>
             <p class="info">Hii! I am Harshada Hedau. I am currently pursuing BCA (2<sup>nd</sup> year) at gh Raisoni college, Nagpur</p>
             <div class="social-contact">
                 <ul>
-                    <li><a href="https://github.com/harhedau" target="blank"><img class="social-media-img" src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/8767487235" target="blank"><img class="social-media-img" src="./../images/whatsapp.png"/></a></li>
-                    <li><a href="mailto:" target="blank"><img class="social-media-img" src="./../images/email.png"/></a></li>
+                    <li><a href="https://github.com/harhedau" target="blank"><img class="social-media-img" src="./../images/About-us img/github.png"/></a></li>
+                    <li><a href="https://wa.me/8767487235" target="blank"><img class="social-media-img" src="./../images/About-us img/whatsapp.png"/></a></li>
+                    <li><a href="mailto:" target="blank"><img class="social-media-img" src="./../images/About-us img/email.png"/></a></li>
                 </ul>
             </div>
 
         </div>
         <div class="card1">
-            <img src="./../images/harshbhange.jpg" class="image"/><br/><br/>
+            <img src="./../images/About-us img/harshbhange.jpg" class="image"/><br/><br/>
             <b class="name">Harsh Bhange</b><br/><br/>
             <p class="info">Hii! I am Harsh Bhange. I am currently pursuing BE (final) in IT branch from TGPCET, Nagpur</p>
             <div class="social-contact">
                 <ul>
-                    <li><a href="https://github.com/harshbhange0" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/7721916040" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
-                    <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
+                    <li><a href="https://github.com/harshbhange0" target="blank"><img class="social-media-img " src="./../images/About-us img/github.png"/></a></li>
+                    <li><a href="https://wa.me/7721916040" target="blank"><img class="social-media-img " src="./../images/About-us img/whatsapp.png"/></a></li>
+                    <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/About-us img/email.png"/></a></li>
                 </ul>
             </div>
 
         </div>
 
         <div class="card1">
-            <img src="./../images/shital.jpg" class="image"/><br/><br/>
+            <img src="./../images/About-us img/shital.jpg" class="image"/><br/><br/>
             <b class="name">Shital Gurule</b><br/><br/>
             <p class="info">Hii! I am Shital Gurule. I am currently working in Fujitsu India Pvt ltd. Mumbai</p>
             <div class="social-contact">
                 <ul>
-                    <li><a href="https://github.com/shitalgurule" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/7378312207" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
-                    <li><a href="mailto:" target="blank"><img class="social-media-img" src="./../images/email.png"/></a></li>
+                    <li><a href="https://github.com/shitalgurule" target="blank"><img class="social-media-img " src="./../images/About-us img/github.png"/></a></li>
+                    <li><a href="https://wa.me/7378312207" target="blank"><img class="social-media-img " src="./../images/About-us img/whatsapp.png"/></a></li>
+                    <li><a href="mailto:" target="blank"><img class="social-media-img" src="./../images/About-us img/email.png"/></a></li>
                 </ul>
             </div>
 
         </div>
         <div class="card1">
-            <img src="./../images/pushpak.jpeg" class="image"/><br/><br/>
+            <img src="./../images/About-us img/pushpak.jpeg" class="image"/><br/><br/>
             <b class="name">Pushpak Parkhe</b><br/><br/>
             <p class="info">Hii! I am Pushpak Parkhe. I am currently pursuing BCA (2<sup>nd</sup> year) at gh Raisoni college, Nagpur</p>
             <div class="social-contact">
                 <ul>
-                    <li><a href="https://github.com/Pushpakparkhe" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/8530455768" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
-                    <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
+                    <li><a href="https://github.com/Pushpakparkhe" target="blank"><img class="social-media-img " src="./../images/About-us img/github.png"/></a></li>
+                    <li><a href="https://wa.me/8530455768" target="blank"><img class="social-media-img " src="./../images/About-us img/whatsapp.png"/></a></li>
+                    <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/About-us img/email.png"/></a></li>
                 </ul>
             </div>
 
         </div>
         <div class="card1">
-            <img src="./../images/natasha.jpg" class="image"/><br/><br/>
+            <img src="./../images/About-us img/natasha.jpg" class="image"/><br/><br/>
             <b class="name">Natasha Bagde</b><br/><br/>
             <p class="info">Hii! I am Natasha Bagde. I am currently pursuing B.E in computer science (3<sup>rd</sup> year) at Priyadarshini college of engineering, Nagpur</p>
             <div class="social-contact">
                 <ul>
-                    <li><a href="https://github.com/bagdenatasha2001" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/8605178103" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
-                    <li><a href="https://github.com/ankitapawar0608" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
+                    <li><a href="https://github.com/bagdenatasha2001" target="blank"><img class="social-media-img " src="./../images/About-us img/github.png"/></a></li>
+                    <li><a href="https://wa.me/8605178103" target="blank"><img class="social-media-img " src="./../images/About-us img/whatsapp.png"/></a></li>
+                    <li><a href="https://github.com/ankitapawar0608" target="blank"><img class="social-media-img " src="./../images/About-us img/email.png"/></a></li>
                 </ul>
             </div>
 
         </div>
         <div class="card1">
-            <img src="./../images/kalyani.jpg" class="image"/><br/><br/>
+            <img src="./../images/About-us img/kalyani.jpg" class="image"/><br/><br/>
             <b class="name">Kalyani Tamboli</b><br/><br/>
             <p class="info">Hii! I am Kalyani Tamboli. I am currently pursuing MCA (final) in Raisoni college, Nagpur</p>
             <div class="social-contact">
                 <ul>
-                    <li><a href="https://github.com/KalyaniTamboli" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/7397995335" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
-                    <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
+                    <li><a href="https://github.com/KalyaniTamboli" target="blank"><img class="social-media-img " src="./../images/About-us img/github.png"/></a></li>
+                    <li><a href="https://wa.me/7397995335" target="blank"><img class="social-media-img " src="./../images/About-us img/whatsapp.png"/></a></li>
+                    <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/About-us img/email.png"/></a></li>
                 </ul>
             </div>
 
         </div>
         <div class="card1">
-            <img src="./../images/ganesh.jpg" class="image size"/><br/><br/>
+            <img src="./../images/About-us img/ganesh.jpg" class="image size"/><br/><br/>
             <b class="name">Ganesh Bobade</b><br/><br/>
             <p class="info">Hii! I am Ganesh Bobade. Working as Process support Executive BPO at Infocept Inventive pvt ltd(US Process),Mumbai</p>
             <div class="social-contact">
                 <ul>
-                    <li><a href="https://github.com/bobadeganesh" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/9325297781" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
-                    <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
+                    <li><a href="https://github.com/bobadeganesh" target="blank"><img class="social-media-img " src="./../images/About-us img/github.png"/></a></li>
+                    <li><a href="https://wa.me/9325297781" target="blank"><img class="social-media-img " src="./../images/About-us img/whatsapp.png"/></a></li>
+                    <li><a href="mailto:" target="blank"><img class="social-media-img " src="./../images/About-us img/email.png"/></a></li>
                 </ul>
             </div>
 
         </div>        
         <div class="card1">
-            <img src="./../images/sakshi.jpg" width="70px" class="image size"/><br/><br/>
+            <img src="./../images/About-us img/sakshi.jpg" width="70px" class="image size"/><br/><br/>
             <b class="name">Sakshi Bhosale</b><br/><br/>
             <p class="info">Hii! I am Sakshi Bhosale. I am currently pursuing degree in computer in (3<sup>rd</sup> year) at parikrama college of engineering, Kashti</p>
             <div class="social-contact">
                 <ul>
-                    <li><a href="https://github.com/Sakshibhosale" target="blank"><img class="social-media-img " src="./../images/github.png"/></a></li>
-                    <li><a href="https://wa.me/8459125755" target="blank"><img class="social-media-img " src="./../images/whatsapp.png"/></a></li>
-                    <li><a href="mailto:sakshirb2918@gmail.com" target="blank"><img class="social-media-img " src="./../images/email.png"/></a></li>
+                    <li><a href="https://github.com/Sakshibhosale" target="blank"><img class="social-media-img " src="./../images/About-us img/github.png"/></a></li>
+                    <li><a href="https://wa.me/8459125755" target="blank"><img class="social-media-img " src="./../images/About-us img/whatsapp.png"/></a></li>
+                    <li><a href="mailto:sakshirb2918@gmail.com" target="blank"><img class="social-media-img " src="./../images/About-us img/email.png"/></a></li>
                 </ul>
             </div>
 
