--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 
     <div class="categories-container">
         <div class="categories-items-container">
-            <a href="./pages/Anniversary.html" class="categories-items">Valentine's Day</a></li>
-            <a href="./pages/birthday.html" class="categories-items">Birthday</a></li>
-            <a href="./pages/Anniversary.html" class="categories-items">Anniversary</a></li>
-            <a href="./pages/Personalized.html" class="categories-items">Personalized</a></li>
-            <a href="./pages/Cakes.html" class="categories-items">Cakes</a></li>
-            <a href="./pages/Occasion.html" class="categories-items">Occasions</a></li>
+            <a href="./pages/Valentine.html" class="categories-items"> 💞Valentine's Day</a></li>
+            <a href="./pages/birthday.html" class="categories-items">🎂Birthday</a></li>
+            <a href="./pages/Anniversary.html" class="categories-items">🎀Anniversary</a></li>
+            <a href="./pages/Personalized.html" class="categories-items">🎁Personalized</a></li>
+            <a href="./pages/Cakes.html" class="categories-items">🎂Cakes</a></li>
+            <a href="./pages/Occasion.html" class="categories-items">💌Occasions</a></li>
         </div>
 
     </div>
@@ -57,21 +57,11 @@
     </section>
 
 
-    <!-- UNIQUE GIFTS SECTION -->
-
-    <!--<div class="unique-gift-container">
-        <div class="unique-gift-text-img-container">
-            <img src="./images/gifts.png" alt="gifts" class="unique-gift-img">
-            <div class="unique-gift-text">
-                 <b> Unique Gifts Online </b> <br>
-               <span class="unique-gift-text2"> Curated to make every special moment a celebration</span>
-            </div>
-
-        </div> -->
+    
         <img src="./images/home page img/simpl_d_igp_illustration_20230204.webp" alt="" class="unique-gift-container-bigimage">
 
 
-    </div>-->
+   
 
 
     <!-- TRENDING GIFTS  -->
