--- a/pages/Anniversary.html
+++ b/pages/Anniversary.html
@@ -37,7 +37,7 @@
 
     <div class="categories-container">
          <div class="categories-items-container">
-            <a href="./../pages/Anniversary.html" class="categories-items">Valentine's Day</a></li>
+            <a href="./../pages/Valentine.html" class="categories-items">Valentine's Day</a></li>
             <a href="./../pages/birthday.html" class="categories-items">Birthday</a></li>
             <a href="./../pages/Anniversary.html" class="categories-items">Anniversary</a></li> 
             <a href="./../pages/Personalized.html" class="categories-items">Personalized</a></li>
