--- a/pages/Valentine.html
+++ b/pages/Valentine.html
@@ -47,21 +47,116 @@
 
     </div>
     <h1>VALENTINE</h1>
-   
+   <marquee class="mar-tag" scrollamount="7" height="40px">
+        VALENTINE WEEK 💟
+    </marquee>
+    <img src="./../images/send-love.jpg" class="baground-img">
+    <div class="valentine-categories-container">
+        <div class="valentine-categories-card">
+            <img src="./../images/rose.jpg" class="valentine-categories-card-img">
+            <h2 class="valentine-categories-title"> ROSE DAY</h2>
+            <b class="days">7 FEB , 2023</b>
+            <button class="button">view more</button>
+        </div>
+
+        <div class="valentine-categories-card">
+            <img src="./../images/propose.jpeg" class="valentine-categories-card-img">
+            <h2 class="valentine-categories-title"> PROPOSE DAY </h2>
+            <b class="days">8 FEB , 2023</b>
+            <button class="button">view more</button>
+        </div>
+
+        <div class="valentine-categories-card">
+            <img src="./../images/chocolate.jpeg" class="valentine-categories-card-img">
+            <h2 class="valentine-categories-title">CHOCOLATE DAY </h2>
+            <b class="days">9 FEB , 2023</b>
+            <button class="button">view more</button>
+
+        </div>
+
+        <div class="valentine-categories-card">
+            <img src="./../images/teddy.jpeg" class="valentine-categories-card-img">
+            <h2 class="valentine-categories-title"> TEDDY DAY </h2>
+            <b class="days">10 FEB , 2023</b>
+            <button class="button">view more</button>
+        </div>
+
+    </div>
+    <div class="valentine-categories-container">
+        <div class="valentine-categories-card">
+            <img src="./../images/promise.jpeg" class="valentine-categories-card-img">
+            <h2 class="valentine-categories-title"> PROMISE DAY </h2>
+            <b class="days">11 FEB , 2023</b>
+            <button class="button">view more</button>
 
 
+        </div>
+        <div class="valentine-categories-card">
+            <img src="./../images/hug.jpg" class="valentine-categories-card-img">
+            <h2 class="valentine-categories-title">HUG DAY</h2>
+            <b class="days">12 FEB , 2023</b>
+            <button class="button">view more</button>
 
 
+        </div>
+        <div class="valentine-categories-card">
+            <img src="./../images/kiss.jpg" class="valentine-categories-card-img">
+            <h2 class="valentine-categories-title"> KISS DAY </h2>
+            <b class="days">13 FEB , ,2023</b>
+            <button class="button">view more</button>
 
+        </div>
 
+        <div class="valentine-categories-card">
+            <img src="./../images/Valentine-day.webp" class="valentine-categories-card-img">
+            <h2 class="valentine-categories-title"> VALENTINES DAY </h2>
+            <b class="days">14 FEB , 2023</b>
+            <button class="button">view more</button>
+        </div>
 
+    </div>
+    
+        <marquee class="mar-tag" scrollamount="7" height="40px">Valentine's Day Gifts</marquee>
+    <div class="card-adjustment">
+        
+        <div class="card">
+            <div class="imgbox">
+                <img src="./../images/img1.jpg">
+            </div>
+            <div class="content">
+                <h2>7 Days of Valentine</h2>
+                ⭐⭐⭐⭐⭐ 4.57
+                <p>Celebrate the entire valentine week like a true romantic with this extraordinary hamper.</p>
+                <h2> Rs. 4990</h2>
+            </div>
+        </div>
 
+        <div class="card">
+            <div class="imgbox">
+                <img src="./../images/img2.jpg">
+            </div>
+            <div class="content">
+                <h2> Valentine Video Box</h2>
+                ⭐⭐⭐⭐⭐ 4.40
+                <p>Gift your Valentine an extraordinary gift hamper comprising 8 gifts and a suprise video inside.</p>
+                <h2> Rs. 3990</h2>
+            </div>
+        </div>
 
+        <div class="card">
+            <div class="imgbox">
+                <img src="./../images/img3.jpg">
+            </div>
+            <div class="content">
+                <h2>7 Stars About Us</h2>
+                ⭐⭐⭐⭐ 4.10
+                <p>A beautiful and romantic frame to recreate the alignment of the stars above you during a special
+                    moment.</p>
+                <h2> Rs. 1490</h2>
+            </div>
+        </div>
+    </div>
 
-
-
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <!-- FOOTER SECTION -->
 
