--- a/pages/Anniversary.html
+++ b/pages/Anniversary.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/footer.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/anniversary.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
     <title>ANNIVERSARY</title>
 </head>
 
@@ -30,23 +31,23 @@
             <a href="./../index.html" class="nav-items">Home</a></li>
             <a href="./../pages/Aboutus.html" class="nav-items">About Us</a></li>
             <a href="./../pages/login.html" class="nav-items">Log in</a></li>
+            
         </div>
     </nav>
 
      <!-- CATEGORIES SECTION -->
 
-    <div class="categories-container">
-         <div class="categories-items-container">
-            <a href="./../pages/Valentine.html" class="categories-items">Valentine's Day</a></li>
-            <a href="./../pages/birthday.html" class="categories-items">Birthday</a></li>
-            <a href="./../pages/Anniversary.html" class="categories-items">Anniversary</a></li> 
-            <a href="./../pages/Personalized.html" class="categories-items">Personalized</a></li>
-            <a href="./../pages/Cakes.html" class="categories-items">Cakes</a></li>
-            <a href="./../pages/Occasion.html" class="categories-items">Occasions</a></li>
-         </div> 
+     <div class="categories-container">
+        <div class="categories-items-container">
+            <a href="./../pages/Valentine.html" class="categories-items"> 💞Valentine's Day</a></li>
+            <a href="./../pages/birthday.html" class="categories-items">🎂Birthday</a></li>
+            <a href="./../pages/Anniversary.html" class="categories-items">🎀Anniversary</a></li>
+            <a href="./../pages/Personalized.html" class="categories-items">🎁Personalized</a></li>
+            <a href="./../pages/Cakes.html" class="categories-items">🎂Cakes</a></li>
+            <a href="./../pages/Occasion.html" class="categories-items">💌Occasions</a></li>
+        </div>
 
     </div>
-
     <div class="anniversary-gifts-title">Hand-picked gifts to celebrate your Love🥂</div>
    
 <!-- First row -->
