--- a/pages/Occasion.html
+++ b/pages/Occasion.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./../css/footer.css">
     <link rel="stylesheet" href="./../css/index.css">
     <link rel="stylesheet" href="./../css/occasions.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
     <title>OCCASIONS</title>
 
 </head>
@@ -36,15 +37,15 @@
 
      <!-- CATEGORIES SECTION -->
 
-    <div class="categories-container">
-         <div class="categories-items-container">
-            <a href="./../pages/Valentine.html" class="categories-items">Valentine's Day</a></li>
-            <a href="./../pages/birthday.html" class="categories-items">Birthday</a></li>
-            <a href="./../pages/Anniversary.html" class="categories-items">Anniversary</a></li> 
-            <a href="./../pages/Personalized.html" class="categories-items">Personalized</a></li>
-            <a href="./../pages/Cakes.html" class="categories-items">Cakes</a></li>
-            <a href="./../pages/Occasion.html" class="categories-items">Occasions</a></li>
-         </div> 
+     <div class="categories-container">
+        <div class="categories-items-container">
+            <a href="./../pages/Valentine.html" class="categories-items"> 💞Valentine's Day</a></li>
+            <a href="./../pages/birthday.html" class="categories-items">🎂Birthday</a></li>
+            <a href="./../pages/Anniversary.html" class="categories-items">🎀Anniversary</a></li>
+            <a href="./../pages/Personalized.html" class="categories-items">🎁Personalized</a></li>
+            <a href="./../pages/Cakes.html" class="categories-items">🎂Cakes</a></li>
+            <a href="./../pages/Occasion.html" class="categories-items">💌Occasions</a></li>
+        </div>
 
     </div>
 
