--- a/pages/Personalized.html
+++ b/pages/Personalized.html
@@ -35,12 +35,12 @@
 
     <div class="categories-container">
         <div class="categories-items-container">
-            <a href="./../pages/Valentine.html" class="categories-items">Valentine's Day</a></li>
-            <a href="./../pages/birthday.html" class="categories-items">Birthday</a></li>
-            <a href="./../pages/Anniversary.html" class="categories-items">Anniversary</a></li>
-            <a href="./../pages/Personalized.html" class="categories-items">Personalized</a></li>
-            <a href="./../pages/Cakes.html" class="categories-items">Cakes</a></li>
-            <a href="./../pages/Occasion.html" class="categories-items">Occasions</a></li>
+            <a href="./../pages/Valentine.html" class="categories-items"> 💞Valentine's Day</a></li>
+            <a href="./../pages/birthday.html" class="categories-items">🎂Birthday</a></li>
+            <a href="./../pages/Anniversary.html" class="categories-items">🎀Anniversary</a></li>
+            <a href="./../pages/Personalized.html" class="categories-items">🎁Personalized</a></li>
+            <a href="./../pages/Cakes.html" class="categories-items">🎂Cakes</a></li>
+            <a href="./../pages/Occasion.html" class="categories-items">💌Occasions</a></li>
         </div>
 
     </div>
