valentine page changes

--- a/pages/Valentine.html
+++ b/pages/Valentine.html
@@ -49,15 +49,13 @@
     </div>
 
     </div>
-    <h1>VALENTINE</h1>
-
-    <marquee class="mar-tag" scrollamount="7" height="40px">
-        VALENTINE WEEK 💟
-    </marquee>
-
     <section id="valentine">
 
     </section>
+
+    <marquee class="mar-tag1" scrollamount="7" height="40px">
+        VALENTINE WEEK 💟
+    </marquee>
 
 
     <div class="valentine-categories-container">
@@ -126,7 +124,7 @@
 
     </div>
 
-    <marquee class="mar-tag" scrollamount="7" height="40px">Valentine's Day Gifts</marquee>
+    <marquee class="mar-tag2" scrollamount="7" height="40px">Valentine's Day Gifts</marquee>
     <div class="card-adjustment">
 
         <div class="card">
