--- a/pages/Cakes.html
+++ b/pages/Cakes.html
@@ -48,7 +48,7 @@
         </div>
 
     </div><br><br>
-    <h1>Pineapple Cakes</h1><br>
+    <h1 class="head">Pineapple Cakes</h1><br>
     <div class="conatiner">
         <div class="item"><img src="./../images/images/p2.webp"height="230px" width="270px"><br>Yummy Pineapple Cake<br> Rs 699<h6>Earliest Delivery:Today</h6></div>
         <div class="item"><img src="./../images/images/p3.webp"height="230px" width="270px"><br>Delicious Creamy Pineapple Cake<br> Rs 669<h6>Earliest Delivery:Today</h6></div>
@@ -80,7 +80,7 @@
         <div class="item"><img src="./../images/images/p1.webp"height="230px" width="270px"><br>Hazelnut Crunch Pineapple Cake<br> Rs 610<h6>Earliest Delivery:Today</h6></div>
     </div><br>
 
-    <h1>Red Velvet Cakes</h1><br>
+    <h1 class="head">Red Velvet Cakes</h1><br>
     <div class="conatiner">
         <div class="item"><img src="./../images/images/a1.webp"height="230px" width="270px"><br>Red Carpet Cake<br> Rs 499<h6>Earliest Delivery:Today</h6></div>
         <div class="item"><img src="./../images/images/r2.webp"height="230px" width="270px"><br>Heart Shaped Red Velvet<br> Rs 669<h6>Earliest Delivery:Today</h6></div>
@@ -112,7 +112,7 @@
         <div class="item"><img src="./../images/images/r19.webp"height="230px" width="270px"><br>Rosy Red Velvet Creamy Cake<br> Rs 579<h6>Earliest Delivery:Today</h6></div>
       </div><br>
 
-      <h1>Fruits Cakes</h1><br>
+      <h1 class="head">Fruits Cakes</h1><br>
       <div class="conatiner">
           <div class="item"><img src="./../images/images/a1.webp"height="230px" width="270px"><br>Tasty Loaded Fruit Cake<br> Rs 699<h6>Earliest Delivery:Today</h6></div>
           <div class="item"><img src="./../images/images/a4.webp"height="230px" width="270px"><br>Juicy Fruits Mixed cake<br> Rs 869<h6>Earliest Delivery:Today</h6></div>
@@ -138,7 +138,7 @@
           <div class="item"><img src="./../images/images/a17.webp"height="230px" width="270px"><br>Butterscotch Cream Cake<br> Rs 610<h6>Earliest Delivery:Today</h6></div>
       </div><br>
 
-      <h1>Chocolate Cakes</h1><br>
+      <h1 class="head">Chocolate Cakes</h1><br>
     <div class="conatiner">
         <div class="item"><img src="./../images/images/cake1.jpeg"height="230px" width="270px"><br>Fantastic Chocolate Cake<br> Rs 437<h6>Earliest Delivery:Today</h6></div>
         <div class="item"><img src="./../images/images/img 2.jpeg"height="230px" width="270px"><br>Chocolate Truffle cake<br> Rs 668<h6>Earliest Delivery:Today</h6></div>
@@ -170,7 +170,7 @@
         <div class="item"><img src="./../images/images/f14.webp"height="230px" width="270px"><br>Mini Chocolate Poke Cake<br> Rs 579<h6>Earliest Delivery:Today</h6></div>
       </div><br>
 
-      <h1>Butterscotch Cakes</h1><br>
+      <h1 class="head">Butterscotch Cakes</h1><br>
     <div class="conatiner">
         <div class="item"><img src="./../images/images/b1.jpg"height="230px" width="270px"><br>Heavenly Butterscotch Cake<br> Rs 599<h6>Earliest Delivery:Today</h6></div>
         <div class="item"><img src="./../images/images/b2.webp"height="230px" width="270px"><br>Butterscotch Cake<br> Rs 869<h6>Earliest Delivery:Today</h6></div>
