--- a/pages/Aboutus.html
+++ b/pages/Aboutus.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="./../css/Aboutus.css" />
     <link rel="stylesheet" href="./../css/index.css" />
     <link rel="stylesheet" href="./../css/footer.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
 </head>
 
 <body>
