--- a/pages/Aboutus.html
+++ b/pages/Aboutus.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./../css/index.css" />
     <link rel="stylesheet" href="./../css/footer.css" />
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -106,7 +107,7 @@
         <div class="card1">
             <img src="./../images/About-us img/harshbhange.jpg" class="image" /><br /><br />
             <b class="name">Harsh Bhange</b><br /><br />
-            <p class="info">Hii! I am Harsh Bhange. I am currently pursuing BE (final) in IT branch from TGPCET, Nagpur
+            <p class="info">Hii! I am Harsh Bhange. I am a Computer Operator and Programming Assistant from Nagpur, Maharashtra
             </p>
             <div class="social-contact">
                 <ul>
