--- a/pages/birthday.html
+++ b/pages/birthday.html
@@ -59,7 +59,7 @@
         <div class="birthday-Gift-container">
             <img src="./../images/birthday images/birthday11.jpg" class="birthdaygift-images">
             <h2 class="birthdaygift-title">Studded Stones Black Jute Clutch </h2>
-            <h3 class="birthdaygift-price"> ₹ 1195</h3>
+            <h3 class="birthdaygift-price"> Only at Rs 1195</h3>
             <a href="" class="birthdaybutton"> Buy Now</a>
 
         </div>
@@ -68,7 +68,7 @@
             <img src="./../images/birthday images/birthday12.jpg" class="birthdaygift-images">
             <h2 class="birthdaygift-title"> Chocolates Gift Box
             </h2>
-            <h3 class="birthdaygift-price"> ₹ 945 </h3>
+            <h3 class="birthdaygift-price"> Only at Rs 945 </h3>
             <a href="" class="birthdaybutton"> Buy Now</a>
         </div>
 
@@ -83,7 +83,7 @@
 
         <div class="birthday-Gift-container">
             <img src="./../images/birthday images/birthday14.jpg" class="birthdaygift-images">
-            <h2 class="birthdaygift-title"> Heart Filled Choco Licious Bouquet </h2>
+            <h2 class="birthdaygift-title"> Heart Filled Choco Licious Buquet </h2>
             <h3 class="birthdaygift-price">Only at Rs 1500 </h3>
             <a href="" class="birthdaybutton"> Buy Now</a>
         </div>
@@ -512,7 +512,7 @@
 
         <br><br><br>
 
-    </div> --> -->
+    </div> -->
 
     <!-- FOOTER SECTION -->
 
