--- a/pages/Valentine.html
+++ b/pages/Valentine.html
@@ -65,21 +65,21 @@
             <img src="./../images/valentine img/rose.jpg" class="valentine-categories-card-img">
             <h2 class="valentine-categories-title"> ROSE DAY</h2>
             <b class="days">7 FEB , 2023</b>
-            <button class="button">view more</button>
+            <button class="button">View More</button>
         </div>
 
         <div class="valentine-categories-card">
             <img src="./../images/valentine img/propose.jpeg" class="valentine-categories-card-img">
             <h2 class="valentine-categories-title"> PROPOSE DAY </h2>
             <b class="days">8 FEB , 2023</b>
-            <button class="button">view more</button>
+            <button class="button">View More</button>
         </div>
 
         <div class="valentine-categories-card">
             <img src="./../images/valentine img/chocolate.jpeg" class="valentine-categories-card-img">
             <h2 class="valentine-categories-title">CHOCOLATE DAY </h2>
             <b class="days">9 FEB , 2023</b>
-            <button class="button">view more</button>
+            <button class="button">View More</button>
 
         </div>
 
@@ -87,7 +87,7 @@
             <img src="./../images/valentine img/teddy.jpeg" class="valentine-categories-card-img">
             <h2 class="valentine-categories-title"> TEDDY DAY </h2>
             <b class="days">10 FEB , 2023</b>
-            <button class="button">view more</button>
+            <button class="button">View More</button>
         </div>
 
     </div>
@@ -96,7 +96,7 @@
             <img src="./../images/valentine img/promise.jpeg" class="valentine-categories-card-img">
             <h2 class="valentine-categories-title"> PROMISE DAY </h2>
             <b class="days">11 FEB , 2023</b>
-            <button class="button">view more</button>
+            <button class="button">View More</button>
 
 
         </div>
@@ -104,7 +104,7 @@
             <img src="./../images/valentine img/hug.jpg" class="valentine-categories-card-img">
             <h2 class="valentine-categories-title">HUG DAY</h2>
             <b class="days">12 FEB , 2023</b>
-            <button class="button">view more</button>
+            <button class="button">View More</button>
 
 
         </div>
@@ -112,7 +112,7 @@
             <img src="./../images/valentine img/kiss.jpg" class="valentine-categories-card-img">
             <h2 class="valentine-categories-title"> KISS DAY </h2>
             <b class="days">13 FEB , ,2023</b>
-            <button class="button">view more</button>
+            <button class="button">View More</button>
 
         </div>
 
@@ -120,7 +120,7 @@
             <img src="./../images/valentine img/Valentine-day.webp" class="valentine-categories-card-img">
             <h2 class="valentine-categories-title"> VALENTINES DAY </h2>
             <b class="days">14 FEB , 2023</b>
-            <button class="button">view more</button>
+            <button class="button">View More</button>
         </div>
 
     </div>
